# ormolu-live

./: .gitignore  README.md  cabal.project  default.nix  nixpkgs.nix  ormolu-live.cabal  release.nix  shell.nix
ghc-lib-parser-8.10.1.20200412/: ghc-lib-parser.cabal
ghc-lib-parser-8.10.1.20200412/compiler/basicTypes/: Avail.hs  ConLike.hs  DataCon.hs  Demand.hs  Id.hs  IdInfo.hs  Literal.hs  MkId.hs  NameCache.hs  NameEnv.hs  NameSet.hs  PatSyn.hs  RdrName.hs  Unique.hs  Var.hs  VarSet.hs
ghc-lib-parser-8.10.1.20200412/compiler/coreSyn/: CoreArity.hs  CoreFVs.hs  CoreMap.hs  CoreOpt.hs  CoreSubst.hs  CoreSyn.hs  CoreTidy.hs  CoreUnfold.hs  CoreUtils.hs  MkCore.hs
ghc-lib-parser-8.10.1.20200412/compiler/iface/: BinFingerprint.hs  IfaceSyn.hs  IfaceType.hs  ToIface.hs
ghc-lib-parser-8.10.1.20200412/compiler/main/: CmdLineParser.hs  DriverPhases.hs  DynFlags.hs  ErrUtils.hs  HeaderInfo.hs  HscTypes.hs  PackageConfig.hs  Packages.hs
ghc-lib-parser-8.10.1.20200412/compiler/parser/: Ctype.hs  RdrHsSyn.hs
ghc-lib-parser-8.10.1.20200412/compiler/prelude/: KnownUniques.hs  PrelNames.hs  PrelRules.hs  PrimOp.hs  TysPrim.hs  TysWiredIn.hs
ghc-lib-parser-8.10.1.20200412/compiler/simplCore/: OccurAnal.hs
ghc-lib-parser-8.10.1.20200412/compiler/simplStg/: RepType.hs
ghc-lib-parser-8.10.1.20200412/compiler/specialise/: Rules.hs
ghc-lib-parser-8.10.1.20200412/compiler/typecheck/: Constraint.hs  TcEvidence.hs  TcOrigin.hs  TcRnTypes.hs  TcType.hs
nix/: ormolu.nix  reflex-platform.nix
pkg/: Main.hs  ormolu-live.cabal
src/: Main.hs
(+28 files in other folders)
