name: ormolu-live
version: 1.0.0
license: BSD3
license-file: LICENSE
author: Artyom Kazak
maintainer: Monadfix <hi@monadfix.com>
category: Development
build-type: Simple
cabal-version: >=1.10

data-files:
  index.html

executable ormolu-live
  main-is: Main.hs
  build-depends:
    base,
    text,
    reflex,
    reflex-dom,
    ormolu
  default-language: Haskell2010
  ghc-options: -Wall -O2
